# worklog-backend

./: .gitignore  .gitleaks.toml  .trigger  .verify-run04  .verify-run05  .verify-run06  Dockerfile  Jenkinsfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: 2.backend-build-deploy.yaml  2.hello-actions_variables.yaml  6.6.build-and-argocd-sync.yaml  9.3.lint.yaml  9.4.multi-env-pipeline.yaml  9.4.security.yaml  9.5.coverage.yaml  9.5.full-cicd-workflow.yaml  9.6.trivy.yaml  backend-deploy.yaml  build-and-argocd-sync.yaml  build-deploy.yaml  build-marketplace.yaml  build-pipeline.yaml  coverage.yaml  full-cicd.yaml  hello-actions.yaml  hello-basic.yaml  hello-pipeline.yaml  lint.yaml  security.yaml  trivy.yaml
deploy_manifest/: worklog-backend.yaml  worklog-mongodb.yaml
src/worklog/: __init__.py  _lint_test.py  config_demo.py  conftest.py  leaked_config.py  leaky_config.py  main.py  settings.py
