[project]
name = "worklog-backend"
version = "0.1.0"
description = "Workload FastAPI backend w/ MongoDB for k8s CICD course"
authors = [
    {name = "Sungmin Lee", email = "sungmin.cs@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "pydantic-settings>=2.2.1",
    "motor>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "pip-audit>=2.7.0",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "coverage>=7.5.1",
    "mongomock-motor>=0.0.29",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.23.6",
    "setuptools>=69.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worklog"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
